--- a/src/lib/Navbar/Navbar.scss
+++ b/src/lib/Navbar/Navbar.scss
@@ -64,8 +64,8 @@
     }
     img {
         margin-right: 12px;
-        width: 32px;
-        height: auto;
+        width: auto;
+        height: 32px;
     }
 }
 
@@ -119,7 +119,8 @@
     overflow: auto;
     padding-top: 62px;
     background-color: var(--background-base);
-    border-left: 1px solid var(--surface-stroke-default);
+    border-radius: var(--overlay-corner-radius);
+    border: 1px solid var(--surface-stroke-default);
     transition: 120ms cubic-bezier(0.1, 0.9, 0.2, 1);
     &.visible {
         transition-duration: 350ms;
