--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -353,6 +353,10 @@ body {
     min-height: 100%;
 }
 
+picture {
+    display: contents;
+}
+
 *, *::before, *::after {
     box-sizing: border-box;
     font: {
