--- a/src/lib/ListViewItem/ListViewItem.scss
+++ b/src/lib/ListViewItem/ListViewItem.scss
@@ -39,7 +39,7 @@
         opacity: 1;
         height: 16px;
     }
-    &.style- {
+    &.type- {
         &default.selected:active::before {
             opacity: 1;
             height: 10px;
@@ -53,7 +53,21 @@
             }
         }
     }
-    :global(svg) {
+    .expander-icon {
+        flex: 0 0 auto;
+        margin-left: 8px;
+        transition: 166ms cubic-bezier(0, 0, 0, 1) transform;
+        &.expanded {
+            transform: rotate(180deg);
+        }
+        :global(svg) {
+            @include icon($size: 12px);
+        }
+    }
+    > span {
+        flex: 1 1 auto;
+    }
+    > :global(svg) {
         @include icon($size: 16px);
         margin-right: 16px;
     }
