--- a/src/lib/ListViewItem/ListViewItem.scss
+++ b/src/lib/ListViewItem/ListViewItem.scss
@@ -2,6 +2,7 @@
 
 .list-view-item {
     @include flex($align: center);
+    flex: 0 0 auto;
     -webkit-user-drag: none;
     text-decoration: none;
     user-select: none;
