--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -99,7 +99,7 @@
         }
     }
     &image-container {
-        @include flex($align: center);
+        @include flex($align: center, $justify: center);
         position: relative;
         width: 100%;
         height: 100%;
@@ -127,6 +127,7 @@
         }
         &right img {
             position: relative;
+            max-width: 708px;
             width: 100%;
             height: auto;
         }
