more docs cleanup

--- a/src/lib/ListViewItem/ListViewItem.scss
+++ b/src/lib/ListViewItem/ListViewItem.scss
@@ -11,7 +11,7 @@
     padding: 0 11px;
     margin: 2px 4px;
     border-radius: var(--control-corner-radius);
-    color: var(--text-primary);
+    color: var(--text-color-primary);
     cursor: default;
     font: {
         size: var(--control-font-size);
