--- a/src/lib/TreeView/TreeView.scss
+++ b/src/lib/TreeView/TreeView.scss
@@ -4,10 +4,11 @@
     &-items {
         padding-left: 24px;
         height: 0;
+        min-height: 0;
         overflow: hidden;
-        transition: 250ms cubic-bezier(0, 0, 0, 1) height;
+        transition: 250ms cubic-bezier(0, 0, 0, 1) min-height;
     }
     &.expanded &-items {
-        height: var(--treeview-subtree-height);
+        min-height: var(--treeview-subtree-height);
     }
 }
