--- a/src/styles/pages/docs.scss
+++ b/src/styles/pages/docs.scss
@@ -35,18 +35,20 @@
     @include flex($direction: column);
     flex: 0 0 auto;
     width: 316px;
-    &-header {
-        z-index: 1;
-        background-color: var(--background-base);
-        position: sticky;
-        padding-top: 4px;
-        top: 0;
-    }
 }
 
 .search {
-    position: relative;
-    margin: 0 16px;
+    position: sticky;
+    z-index: 1;
+    top: 0;
+    margin: 4px 16px 12px 16px;
+    background-color: var(--background-base);
+    hr {
+        border: none;
+        border-top: 1px solid var(--divider-color-default);
+        margin: 0;
+        margin-top: 12px;
+    }
 }
 
 .autosuggest-flyout {
