fix autosuggest offset

--- a/src/lib/MenuFlyout/MenuFlyout.scss
+++ b/src/lib/MenuFlyout/MenuFlyout.scss
@@ -14,6 +14,7 @@
     height: fit-content;
     margin: 0;
     user-select: none;
+    text-align: left;
     border: 1px solid var(--surface-stroke-flyout);
     background-color: var(--background-quarternary);
     border-radius: var(--overlay-corner-radius);
