--- a/src/lib/ColorSwatch/ColorSwatch.scss
+++ b/src/lib/ColorSwatch/ColorSwatch.scss
@@ -12,4 +12,12 @@
     box-shadow: inset 0 0 0 2px var(--accent-color-default),
     inset 0 0 0 3px var(--background-base);
   }
+
+  &:hover{
+    cursor: pointer;
+  }
+
+  &:focus-visible{
+    outline: 1px solid var(--accent-color-default);
+  }
 }
