--- a/src/lib/ColorSwatch/ColorSwatch.scss
+++ b/src/lib/ColorSwatch/ColorSwatch.scss
@@ -1,23 +1,23 @@
 .color-swatch {
-  margin: 0;
-  width: 72px;
-  height: 72px;
-  overflow: hidden;
-  appearance: none;
-  outline: none;
-  border-radius: var(--control-corner-radius);
-
-  &:checked {
-    border-radius: calc(var(--control-corner-radius) + 2px);
-    box-shadow: inset 0 0 0 2px var(--accent-color-default),
-    inset 0 0 0 3px var(--background-base);
-  }
-
-  &:hover{
     cursor: pointer;
-  }
+    margin: 0;
+    width: 72px;
+    height: 72px;
+    overflow: hidden;
+    appearance: none;
+    outline: none;
+    border-radius: var(--control-corner-radius);
 
-  &:focus-visible{
-    outline: 1px solid var(--accent-color-default);
-  }
+    &:checked {
+        border-radius: calc(var(--control-corner-radius) + 2px);
+        box-shadow: inset 0 0 0 2px var(--accent-color-default),
+                    inset 0 0 0 3px var(--background-base);
+    }
+
+    &:focus-visible {
+        box-shadow: inset 0 0 0 2px var(--accent-color-default),
+                    inset 0 0 0 3px var(--background-base),
+                    0 0 0 1px var(--background-base),
+                    0 0 0 3px var(--focus-stroke-outer) !important;
+    }
 }
