--- a/src/styles/pages/error.scss
+++ b/src/styles/pages/error.scss
@@ -3,8 +3,9 @@
 .error-page {
     @include flex($direction: column, $align: center, $justify: center);
     color: #222;
-    background-color: var(--background-base);
+    background-color: var(--layer-color-default);
     width: 100%;
+    height: 100%;
     flex: 1 1 auto;
     position: relative;
     color-scheme: light;
