--- a/src/lib/ListViewItem/ListViewItem.scss
+++ b/src/lib/ListViewItem/ListViewItem.scss
@@ -66,6 +66,10 @@
         }
     }
     > span {
+        max-width: 100%;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
         flex: 1 1 auto;
     }
     > :global(svg) {
