--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -204,6 +204,7 @@
         --system-color-success: #0F7B0F;
         --system-color-caution: #9D5D00;
         --system-color-critical: #C42B1C;
+        --system-color-attention: #005fb7;
         --system-color-neutral: #00000072;
         --system-background-attention: #F6F6F680;
         --system-background-success: #DFF6DD;
@@ -311,6 +312,7 @@
         --system-color-success: #6CCB5F;
         --system-color-caution: #FCE100;
         --system-color-critical: #FF99A4;
+        --system-color-attention: #60cdff;
         --system-color-neutral: #FFFFFF8B;
         --system-background-attention: #FFFFFF08;
         --system-background-success: #393D1B;
