--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -218,9 +218,161 @@
     }
 }
 
+@keyframes feature-preview {
+    from {
+        opacity: 0;
+        transform: translateY(48px) scale(0.9);
+        transform-origin: bottom;
+    }
+}
+
+@keyframes cloud-provider {
+    from {
+        opacity: 0;
+        transform: rotate(var(--provider-rotate)) scale(0.5);
+    }
+}
+
+@keyframes cloud-provider-float {
+    0% {
+        transform: rotate(var(--provider-rotate)) translateY(0);
+    }
+    50% {
+        transform: rotate(calc(var(--provider-rotate) * -1)) translateY(-10px);
+    }
+    to {
+        transform: rotate(var(--provider-rotate)) translateY(0);
+    }
+}
+
+@keyframes cloud-status-icon {
+    from {
+        transform: scale(0.75);
+        opacity: 0;
+    }
+}
+
 .features-section- {
     &left {
+        @include flex($align: center, $justify: center);
+        position: relative;
         flex: 1 1 auto;
+        .backdrop-logo {
+            height: 100%;
+            width: auto;
+            max-width: 100%;
+            transform: rotate(-10deg);
+            path {
+                fill: none;
+                stroke: var(--card-stroke-default);
+                stroke-width: 0.25;
+            }
+        } 
+        .cloud-files-preview {
+            position: absolute;
+            animation: feature-preview 500ms cubic-bezier(0.165, 0.84, 0.44, 1) backwards 400ms;
+            width: 416px;
+            max-width: 100%;
+            border: 1px solid var(--surface-stroke-default);
+            background-color: var(--background-base);
+            border-radius: var(--overlay-corner-radius);
+            box-shadow: 0 2.74416px 2.74416px rgb(0 0 0 / 3%),
+                        0 5.48831px 5.48831px rgb(0 0 0 / 4%),
+                        0 13.7208px 10.9766px rgb(0 0 0 / 5%),
+                        0 20.5812px 20.5812px rgb(0 0 0 / 6%),
+                        0 41.1623px 41.1623px rgb(0 0 0 / 7%),
+                        0 96.0454px 89.1851px rgb(0 0 0 / 9%);
+            table {
+                user-select: none;
+                white-space: nowrap;
+                margin-bottom: 3px;
+                width: 100%;
+                border-collapse: collapse;
+                font-size: 1.4rem;
+                line-height: 1.4rem;
+                * {
+                    font-family: "Segoe UI Variable Text", var(--font-family-sans-serif);
+                }
+                tr {
+                    height: 36px;
+                    position: relative;
+                    &:not(:first-child) {
+                        &::after {
+                            content: "";
+                            position: absolute;
+                            top: 3px;
+                            left: 5px;
+                            width: calc(100% - 10px);
+                            height: 30px;
+                            z-index: 0;
+                            border-radius: var(--control-corner-radius);
+                        }
+                        &:hover::after {
+                            background-color: var(--subtle-color-secondary);
+                        }
+                        &:active::after {
+                            background-color: var(--subtle-color-tertiary);
+                        }
+                    }
+                }
+                td, th {
+                    position: relative;
+                    vertical-align: middle;
+                    z-index: 1;
+                    padding: 0 12px;
+                    color: var(--text-color-primary);
+                    &:first-child {
+                        border-left: none;
+                        padding-right: 6px;
+                        padding-left: 12px;
+                    }
+                }
+                td {
+                    &.status-success :global(svg) {
+                        color: var(--system-color-success);
+                    }
+                    &.status-sync :global(svg) {
+                        color: var(--system-color-attention);
+                    }
+                    :global(svg) {
+                        @include icon($size: 20px);
+                        animation: 250ms ease cloud-status-icon backwards calc(600ms + (100ms * var(--file-index)));
+                    }
+                }
+                th {
+                    font-weight: 600;
+                    text-align: left;
+                    border-left: 1px solid var(--control-stroke-default);
+                    border-bottom: 1px solid var(--control-stroke-default);
+                    &:last-child {
+                        width: 100%;
+                    }
+                }
+            }
+        }
+        .cloud-provider {
+            position: absolute;
+            z-index: 2;
+            width: 108px;
+            height: auto;
+            filter: drop-shadow(0 4px 12px rgba(0, 0, 0, 0.25));
+            transform: rotate(var(--provider-rotate));
+            &:nth-child(1) {
+                --provider-rotate: 5deg;
+                bottom: 36px;
+                left: -54px;
+                animation: cloud-provider 250ms cubic-bezier(0.165, 0.84, 0.44, 1) backwards 800ms,
+                           cloud-provider-float 10s ease infinite 1000ms;
+            }
+            &:nth-child(2) {
+                --provider-rotate: -8deg;
+                right: -54px;
+                top: 12px;
+                width: 128px;
+                animation: cloud-provider 250ms cubic-bezier(0.165, 0.84, 0.44, 1) backwards 1000ms,
+                           cloud-provider-float 10s ease infinite 1400ms;
+            }
+        }
     }
     &right {
         width: 50%;
@@ -300,13 +452,25 @@
             &4 {
                 --focus-stroke-outer: #000;
                 --accent-color-default: #fff;
+                --accent-color-secondary: rgba(255, 255, 255, 0.8);
+                --accent-color-tertiary: rgba(255, 255, 255, 0.6);
                 --accent-text-default: var(--text-color-tertiary);
-                --accent-text-contrast-primary: #000000;
-                --text-color-primary: #000000;
+                --accent-text-tertiary: var(--accent-text-default);
+                --accent-text-contrast-primary: #000;
+                --accent-text-contrast-secondary: var(--accent-text-contrast-primary);
+                --text-color-primary: #000;
                 --text-color-tertiary: #332500;
-                --text-color-secondary: #000000;
-                --subtle-color-secondary: #ffffff;
+                --text-color-secondary: var(--text-color-primary);
+                --subtle-color-secondary: #fff;
                 --background-base: #feb400;
+                .hyperlink-button {
+                    &:hover {
+                        background-color: rgba(0, 0, 0, 0.1);
+                    }
+                    &:active {
+                        background-color: rgba(0, 0, 0, 0.2);
+                    }
+                }
             }
             &5 {
                 --focus-stroke-outer: #fff;
