--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -342,17 +342,21 @@
  */
 
 html, body {
-    font-size: 62.5%;
     margin: 0;
     width: 100%;
     height: 100%;
     background-color: var(--background-secondary);
 }
 
+html {
+    font-size: 62.5%;
+}
+
 body {
     @include flex($direction: column);
     height: fit-content;
     min-height: 100%;
+    font-size: 1.4rem;
 }
 
 picture {
