--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -264,13 +264,12 @@
         @include flex($align: center, $justify: center);
         position: relative;
         flex: 1 1 auto;
-
-        // Common elements
         .backdrop-logo {
+            position: absolute;
             height: 100%;
             width: auto;
-            max-width: 100%;
-            transform: rotate(-10deg) scale(var(--logo-scale));
+            max-width: 132%;
+            transform: rotate(-10deg) scale(var(--logo-scale, 1));
             path {
                 fill: none;
                 stroke: var(--card-stroke-default);
@@ -278,6 +277,8 @@
             }
         }
         .showcase-panel {
+            position: relative;
+            user-select: none;
             border: 1px solid var(--surface-stroke-default);
             background-color: var(--background-base);
             border-radius: var(--overlay-corner-radius);
@@ -287,128 +288,11 @@
                         0 20.5812px 20.5812px rgb(0 0 0 / 6%),
                         0 41.1623px 41.1623px rgb(0 0 0 / 7%),
                         0 96.0454px 89.1851px rgb(0 0 0 / 9%);
-        }
-
-        // Cloud showcase
-        .cloud-files-showcase {
-            position: absolute;
-            animation: feature-preview 500ms cubic-bezier(0.165, 0.84, 0.44, 1) backwards 400ms;
-            width: 416px;
-            max-width: 100%;
-            table {
-                user-select: none;
-                white-space: nowrap;
-                margin-bottom: 3px;
-                width: 100%;
-                border-collapse: collapse;
-                line-height: 1.4rem;
-                * {
-                    font-family: "Segoe UI Variable Text", var(--font-family-sans-serif);
-                }
-                tr {
-                    height: 36px;
-                    position: relative;
-                    &:not(:first-child) {
-                        &::after {
-                            content: "";
-                            position: absolute;
-                            top: 3px;
-                            left: 5px;
-                            width: calc(100% - 10px);
-                            height: 30px;
-                            z-index: 0;
-                            border-radius: var(--control-corner-radius);
-                        }
-                        &:hover::after {
-                            background-color: var(--subtle-color-secondary);
-                        }
-                        &:active::after {
-                            background-color: var(--subtle-color-tertiary);
-                        }
-                    }
-                }
-                td, th {
-                    position: relative;
-                    vertical-align: middle;
-                    z-index: 1;
-                    padding: 0 12px;
-                    color: var(--text-color-primary);
-                    &:first-child {
-                        border-left: none;
-                        padding-right: 6px;
-                        padding-left: 12px;
-                    }
-                }
-                td {
-                    &.status-success :global(svg) {
-                        color: var(--system-color-success);
-                    }
-                    &.status-sync :global(svg) {
-                        color: var(--system-color-attention);
-                    }
-                    :global(svg) {
-                        @include icon($size: 20px);
-                        animation: 250ms ease cloud-status-icon backwards calc(600ms + (100ms * var(--file-index)));
-                    }
-                }
-                th {
-                    font-weight: 600;
-                    text-align: left;
-                    border-left: 1px solid var(--control-stroke-default);
-                    border-bottom: 1px solid var(--control-stroke-default);
-                    &:last-child {
-                        width: 100%;
-                    }
-                }
+            * {
+                font-family: "Segoe UI Variable Text", var(--font-family-sans-serif);
             }
-        }
-        .cloud-provider {
-            position: absolute;
-            z-index: 2;
-            width: 108px;
-            height: auto;
-            filter: drop-shadow(0 4px 12px rgba(0, 0, 0, 0.25));
-            transform: rotate(var(--provider-rotate));
-            &:nth-child(1) {
-                --provider-rotate: 5deg;
-                bottom: 36px;
-                left: -54px;
-                animation: cloud-provider 250ms cubic-bezier(0.165, 0.84, 0.44, 1) backwards 800ms,
-                           cloud-provider-float 10s ease infinite 1000ms;
-            }
-            &:nth-child(2) {
-                --provider-rotate: -8deg;
-                right: -54px;
-                top: 12px;
-                width: 128px;
-                animation: cloud-provider 250ms cubic-bezier(0.165, 0.84, 0.44, 1) backwards 1000ms,
-                           cloud-provider-float 10s ease infinite 1400ms;
-            }
-        }
-        
-        // Previewer showcase
-        .previewer-showcase {
-            position: absolute;
-            display: flex;
-            align-items: center;
-            .preview-pane {
-                position: absolute;
-                width: 100%;
-                height: 100%;
-                animation: 400ms cubic-bezier(0.1, 0.9, 0.2, 1) preview-pane-open backwards 800ms;
-                border-radius: var(--control-corner-radius) 0 0 var(--control-corner-radius);
-                &-outer {
-                    position: relative;
-                    width: 260px;
-                    height: 400px;
-                }
-            }
-            .files-list {
-                @include flex($direction: column, $gap: 16px);
-                position: relative;
-                z-index: 1;
-                animation: feature-preview 500ms cubic-bezier(0.165, 0.84, 0.44, 1) backwards 400ms;
-                width: 96px;
+            img {
+                -webkit-user-drag: none;
             }
         }
     }
@@ -418,12 +302,157 @@
     }
 }
 
+// Cloud showcase
+.cloud-files-showcase {
+    animation: feature-preview 500ms cubic-bezier(0.165, 0.84, 0.44, 1) backwards 400ms;
+    width: 416px;
+    max-width: 100%;
+    table {
+        white-space: nowrap;
+        margin-bottom: 3px;
+        width: 100%;
+        border-collapse: collapse;
+        line-height: 1.4rem;
+        tr {
+            height: 36px;
+            position: relative;
+            &:not(:first-child) {
+                &::after {
+                    content: "";
+                    position: absolute;
+                    top: 3px;
+                    left: 5px;
+                    width: calc(100% - 10px);
+                    height: 30px;
+                    z-index: 0;
+                    border-radius: var(--control-corner-radius);
+                }
+                &:hover::after {
+                    background-color: var(--subtle-color-secondary);
+                }
+                &:active::after {
+                    background-color: var(--subtle-color-tertiary);
+                }
+            }
+        }
+        td, th {
+            position: relative;
+            vertical-align: middle;
+            z-index: 1;
+            padding: 0 12px;
+            color: var(--text-color-primary);
+            &:first-child {
+                border-left: none;
+                padding-right: 6px;
+                padding-left: 12px;
+            }
+        }
+        td {
+            &.status-success :global(svg) {
+                color: var(--system-color-success);
+            }
+            &.status-sync :global(svg) {
+                color: var(--system-color-attention);
+            }
+            :global(svg) {
+                @include icon($size: 20px);
+                animation: 250ms ease cloud-status-icon backwards calc(600ms + (100ms * var(--file-index)));
+            }
+        }
+        th {
+            font-weight: 600;
+            text-align: left;
+            border-left: 1px solid var(--control-stroke-default);
+            border-bottom: 1px solid var(--control-stroke-default);
+            &:last-child {
+                width: 100%;
+            }
+        }
+    }
+    .cloud-provider {
+        position: absolute;
+        z-index: 2;
+        width: 108px;
+        height: auto;
+        filter: drop-shadow(0 4px 12px rgba(0, 0, 0, 0.25));
+        transform: rotate(var(--provider-rotate));
+        &:nth-child(1) {
+            --provider-rotate: 5deg;
+            bottom: 36px;
+            left: -54px;
+            animation: cloud-provider 250ms cubic-bezier(0.165, 0.84, 0.44, 1) backwards 800ms,
+                       cloud-provider-float 10s ease infinite 1000ms;
+        }
+        &:nth-child(2) {
+            --provider-rotate: -8deg;
+            right: -54px;
+            top: 12px;
+            width: 128px;
+            animation: cloud-provider 250ms cubic-bezier(0.165, 0.84, 0.44, 1) backwards 1000ms,
+                       cloud-provider-float 10s ease infinite 1400ms;
+        }
+    }
+}
+
+// Previewer showcase
+.previewer-showcase {
+    @include flex($align: center);
+    .preview-pane {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        animation: 400ms cubic-bezier(0.1, 0.9, 0.2, 1) preview-pane-open backwards 800ms;
+        border-radius: var(--overlay-corner-radius) 0 0 var(--overlay-corner-radius);
+        &-outer {
+            position: relative;
+            width: 260px;
+            height: 390px;
+        }
+    }
+    .files-grid {
+        display: grid;
+        grid-gap: 4px;
+        padding: 12px;
+        position: relative;
+        z-index: 1;
+        animation: feature-preview 500ms cubic-bezier(0.165, 0.84, 0.44, 1) backwards 400ms;
+        .file {
+            @include flex($direction: column, $justify: between, $align: center);
+            width: 84px;
+            height: 96px;
+            padding: 12px;
+            border-radius: var(--control-corner-radius);
+            color: var(--text-color-primary);
+            font-size: var(--control-font-size);
+            &:hover {
+                background-color: var(--subtle-color-secondary);
+            }
+            &:active {
+                background-color: var(--subtle-color-tertiary);
+            }
+            &.selected {
+                background-color: var(--subtle-color-secondary);
+                border-radius: calc(var(--control-corner-radius) + 2px);
+                box-shadow: inset 0 0 0 2px var(--accent-color-default),
+                            inset 0 0 0 3px var(--background-base);
+            }
+            img {
+                width: 88%;
+                height: auto;
+            }
+        }
+    }
+}
+
 .feature-cards-container {
     display: block;
     column-count: 2;
     column-gap: 8px;
     :global(.feature-card) {
         margin-bottom: 8px;
+        &.selected {
+            border-color: transparent;
+        }
     }
     @media only screen and (max-width: 1164px) {
         column-count: 1;
