more preview pane functionality

--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -213,7 +213,7 @@
     #features-section {
         background-color: var(--background-base);
         .page-section-inner {
-            @include flex($wrap: true);
+            display: flex;
         }
     }
 }
@@ -297,6 +297,7 @@
         }
     }
     &right {
+        flex: 0 0 auto;
         width: 50%;
         margin-left: 48px;
     }
@@ -407,6 +408,41 @@
             position: relative;
             width: 260px;
             height: 390px;
+        }
+        .grabber {
+            @include flex($align: center, $justify: center);
+            width: 100%;
+            height: 20px;
+            cursor: n-resize;
+            &::before {
+                content: "";
+                position: absolute;
+                background: var(--subtle-color-secondary);
+                border-radius: 4px;
+                height: 4px;
+                width: 24px;
+            }
+        }
+        .preview,
+        .metadata {
+            padding: 8px;
+        }
+        .preview {
+            @include flex($align: center);
+            height: 150px;
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: contain;
+            }
+            iframe {
+                width: 100%;
+                height: 100%;
+                border-radius: var(--control-corner-radius);   
+            }
+        }
+        .metadata {
+            word-break: break-word;
         }
     }
     .files-grid {
