--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -44,3 +44,479 @@
     height: auto;
     fill: currentColor;
 }
+
+@mixin hljs-vs-light {
+    .hljs {
+        color: #000;
+        &-comment,
+        &-quote,
+        &-variable {
+            color: green;
+        }
+
+        &-built_in,
+        &-keyword,
+        &-name,
+        &-selector-tag,
+        &-tag {
+            color: #00f;
+        }
+
+        &-addition,
+        &-attribute,
+        &-literal,
+        &-section,
+        &-string,
+        &-template-tag,
+        &-template-variable,
+        &-title,
+        &-type {
+            color: #a31515;
+        }
+
+        &-deletion,
+        &-meta,
+        &-selector-attr,
+        &-selector-pseudo {
+            color: #2b91af;
+        }
+
+        &-doctag {
+            color: grey;
+        }
+
+        &-attr {
+            color: red;
+        }
+
+        &-bullet,
+        &-link,
+        &-symbol {
+            color: #00b0e8;
+        }
+
+        &-emphasis {
+            font-style: italic;
+        }
+
+        &-strong {
+            font-weight: 700;
+        }
+    }
+}
+
+@mixin hljs-vs-dark {
+    .hljs {
+        color: #dcdcdc;
+        &-keyword,
+        &-literal,
+        &-name,
+        &-symbol {
+            color: #569cd6;
+        }
+
+        &-link {
+            color: #569cd6;
+            text-decoration: underline;
+        }
+
+        &-built_in,
+        &-type {
+            color: #4ec9b0;
+        }
+
+        &-class,
+        &-number {
+            color: #b8d7a3;
+        }
+
+        &-meta &-string,
+        &-string {
+            color: #d69d85;
+        }
+
+        &-regexp,
+        &-template-tag {
+            color: #9a5334;
+        }
+
+        &-formula,
+        &-function,
+        &-params,
+        &-subst,
+        &-title {
+            color: #dcdcdc;
+        }
+
+        &-comment,
+        &-quote {
+            color: #57a64a;
+            font-style: italic;
+        }
+
+        &-doctag {
+            color: #608b4e;
+        }
+
+        &-meta,
+        &-meta &-keyword,
+        &-tag {
+            color: #9b9b9b;
+        }
+
+        &-template-variable,
+        &-variable {
+            color: #bd63c5;
+        }
+
+        &-attr,
+        &-attribute {
+            color: #9cdcfe;
+        }
+
+        &-section {
+            color: gold;
+        }
+
+        &-emphasis {
+            font-style: italic;
+        }
+
+        &-strong {
+            font-weight: 700;
+        }
+
+        &-bullet,
+        &-selector-attr,
+        &-selector-class,
+        &-selector-id,
+        &-selector-pseudo,
+        &-selector-tag {
+            color: #d7ba7d;
+        }
+
+        &-addition {
+            background-color: #144212;
+            display: inline-block;
+            width: 100%;
+        }
+
+        &-deletion {
+            background-color: #600;
+            display: inline-block;
+            width: 100%;
+        }
+    }
+}
+
+@mixin prism-vs-light {
+    & {
+        color: #393A34;
+    }
+    
+    .comment,
+    .prolog,
+    .doctype,
+    .cdata {
+        color: #008000;
+        font-style: italic;
+    }
+    
+    .namespace {
+        opacity: .7;
+    }
+    
+    .string {
+        color: #A31515;
+    }
+    
+    .punctuation,
+    .operator {
+        color: #393A34; /* no highlight */
+    }
+    
+    .url,
+    .symbol,
+    .number,
+    .boolean,
+    .variable,
+    .constant,
+    .inserted {
+        color: #36acaa;
+    }
+    
+    .atrule,
+    .keyword,
+    .attr-value,
+    .language-autohotkey .selector,
+    .language-json .boolean,
+    .language-json .number,
+    &[class*="language-css"] {
+        color: #0000ff;
+    }
+    
+    .function {
+        color: #393A34;
+    }
+    
+    .deleted,
+    .language-autohotkey .tag {
+        color: #9a050f;
+    }
+    
+    .selector,
+    .language-autohotkey .keyword {
+        color: #00009f;
+    }
+    
+    .important {
+        color: #e90;
+    }
+    
+    .important,
+    .bold {
+        font-weight: bold;
+    }
+    
+    .italic {
+        font-style: italic;
+    }
+    
+    .class-name,
+    .language-json .property {
+        color: #2B91AF;
+    }
+    
+    .tag,
+    .selector {
+        color: #800000;
+    }
+    
+    .attr-name,
+    .property,
+    .regex,
+    .entity {
+        color: #ff0000;
+    }
+    
+    .directive.tag .tag {
+        background: #ffff00;
+        color: #393A34;
+    }
+    
+    .line-numbers .line-numbers-rows {
+        border-right-color: #a5a5a5;
+    }
+    
+    .line-numbers-rows > span:before {
+        color: #2B91AF;
+    }
+}
+
+@mixin prism-vs-dark {
+    & {
+        color: #d4d4d4;
+    }
+    
+    &[class*="language-javascript"],
+    &[class*="language-jsx"],
+    &[class*="language-typescript"],
+    &[class*="language-tsx"] {
+        color: #9cdcfe;
+    }
+    
+    &[class*="language-css"] {
+        color: #ce9178;
+    }
+    
+    &[class*="language-html"] {
+        color: #d4d4d4;
+    }
+    
+    .language-regex .anchor {
+        color: #dcdcaa;
+    }
+    
+    .language-html .punctuation {
+        color: #808080;
+    }
+    
+    .namespace {
+        opacity: .7;
+    }
+    
+    .doctype .doctype-tag {
+        color: #569CD6;
+    }
+    
+    .doctype .name {
+        color: #9cdcfe;
+    }
+    
+    .comment,
+    .prolog {
+        color: #6a9955;
+    }
+    
+    .punctuation,
+    .language-html .language-css .punctuation,
+    .language-html .language-javascript .punctuation {
+        color: #d4d4d4;
+    }
+    
+    .property,
+    .tag,
+    .boolean,
+    .number,
+    .constant,
+    .symbol,
+    .inserted,
+    .unit {
+        color: #b5cea8;
+    }
+    
+    .selector,
+    .attr-name,
+    .string,
+    .char,
+    .builtin,
+    .deleted {
+        color: #ce9178;
+    }
+    
+    .language-css .string.url {
+        text-decoration: underline;
+    }
+    
+    .operator,
+    .entity {
+        color: #d4d4d4;
+    }
+    
+    .operator.arrow {
+        color: #569CD6;
+    }
+    
+    .atrule {
+        color: #ce9178;
+    }
+    
+    .atrule .rule {
+        color: #c586c0;
+    }
+    
+    .atrule .url {
+        color: #9cdcfe;
+    }
+    
+    .atrule .url .function {
+        color: #dcdcaa;
+    }
+    
+    .atrule .url .punctuation {
+        color: #d4d4d4;
+    }
+    
+    .keyword {
+        color: #569CD6;
+    }
+    
+    .keyword.module,
+    .keyword.control-flow {
+        color: #c586c0;
+    }
+    
+    .function,
+    .function .maybe-class-name {
+        color: #dcdcaa;
+    }
+    
+    .regex {
+        color: #d16969;
+    }
+    
+    .important {
+        color: #569cd6;
+    }
+    
+    .italic {
+        font-style: italic;
+    }
+    
+    .constant {
+        color: #9cdcfe;
+    }
+    
+    .class-name,
+    .maybe-class-name {
+        color: #4ec9b0;
+    }
+    
+    .console {
+        color: #9cdcfe;
+    }
+    
+    .parameter {
+        color: #9cdcfe;
+    }
+    
+    .interpolation {
+        color: #9cdcfe;
+    }
+    
+    .punctuation.interpolation-punctuation {
+        color: #569cd6;
+    }
+    
+    .boolean {
+        color: #569cd6;
+    }
+    
+    .property,
+    .variable,
+    .imports .maybe-class-name,
+    .exports .maybe-class-name {
+        color: #9cdcfe;
+    }
+    
+    .selector {
+        color: #d7ba7d;
+    }
+    
+    .escape {
+        color: #d7ba7d;
+    }
+    
+    .tag {
+        color: #569cd6;
+    }
+    
+    .tag .punctuation {
+        color: #808080;
+    }
+    
+    .cdata {
+        color: #808080;
+    }
+    
+    .attr-name {
+        color: #9cdcfe;
+    }
+    
+    .attr-value,
+    .attr-value .punctuation {
+        color: #ce9178;
+    }
+    
+    .attr-value .punctuation.attr-equals {
+        color: #d4d4d4;
+    }
+    
+    .entity {
+        color: #569cd6;
+    }
+    
+    .namespace {
+        color: #4ec9b0;
+    }
+}
