--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -398,6 +398,7 @@
 .previewer-showcase {
     @include flex($align: center);
     .preview-pane {
+        @include flex($direction: column);
         position: absolute;
         width: 100%;
         height: 100%;
@@ -419,7 +420,7 @@
                 background: var(--subtle-color-secondary);
                 border-radius: 4px;
                 height: 4px;
-                width: 24px;
+                width: 28px;
             }
         }
         .preview,
@@ -429,19 +430,74 @@
         .preview {
             @include flex($align: center);
             height: 150px;
-            img {
-                width: 100%;
-                height: 100%;
-                object-fit: contain;
-            }
-            iframe {
-                width: 100%;
-                height: 100%;
-                border-radius: var(--control-corner-radius);   
-            }
         }
         .metadata {
+            user-select: text;
             word-break: break-word;
+            color: var(--text-color-primary);
+            line-height: normal;
+            font: {
+                size: var(--control-font-size);
+                weight: normal;
+            }
+        }
+        img,
+        iframe,
+        :global(pre) {
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            user-select: text;
+        }
+        img {
+            object-fit: contain;
+        }
+        iframe {
+            border-radius: var(--control-corner-radius);   
+        }
+        :global {
+            pre {
+                margin: 0;
+                &::-webkit-scrollbar {
+                    display: none;
+                }
+                @media (prefers-color-scheme: light) {
+                    @include hljs-vs-light;
+                }
+                @media (prefers-color-scheme: dark) {
+                    @include hljs-vs-dark;
+                }
+                * {
+                    font-family: var(--font-family-monospace);
+                }
+            }
+        }
+        h4,
+        h5 {
+            margin: 0;
+            text-align: center;
+        }
+        h4 {
+            margin-bottom: 5px;
+            font: {
+                size: 20px;
+                weight: 700;
+            }
+        }
+        h5 {
+            font: {
+                size: 18px;
+                weight: normal;
+            }
+        }
+        h6 {
+            user-select: none;
+            margin: 0;
+            margin-top: 8px;
+            font: {
+                size: var(--control-font-size);
+                weight: 300;
+            }
         }
     }
     .files-grid {
