--- a/src/styles/pages/error.scss
+++ b/src/styles/pages/error.scss
@@ -49,6 +49,7 @@
         padding: 12px 8px;
         margin: 0;
         code {
+            color: inherit;
             font-family: monospace;
         }
     }
