--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,5 +1,6 @@
 @use "./mixins" as *;
 
+// Sideload inter as a fallback font
 @font-face {
     font-family: 'Inter var';
     font-style: normal;
@@ -341,6 +342,29 @@
  * Base styles
  */
 
+// Properly size box model
+*, *::before, *::after {
+    box-sizing: border-box;
+}
+
+// Focus rings
+*:focus-visible:not(.textbox) {
+    outline: none !important;
+    box-shadow: 0 0 0 2px var(--focus-stroke-outer) !important;
+}
+
+// Set font
+::-webkit-input-placeholder, body, button, input, select, textarea {
+    font-family: var(--font-family-sans-serif);
+}
+
+// Selection colors
+::selection {
+    background-color: var(--accent-color-dark-1);
+    color: #fff;
+}
+
+// Outer elements -- <html> and <body>
 html, body {
     margin: 0;
     width: 100%;
@@ -348,6 +372,9 @@ html, body {
     background-color: var(--background-secondary);
 }
 
+// Setting the font-size to 62.5% will
+// mean 1rem is equal to 10px assuming
+// 100% scaling.
 html {
     font-size: 62.5%;
 }
@@ -359,10 +386,12 @@ body {
     font-size: 1.4rem;
 }
 
+// Only render inner <img> elements into the DOM
 picture {
     display: contents;
 }
 
+// Codeblock syntax highlighting
 code {
     @media (prefers-color-scheme: light) {
         @include prism-vs-light;
@@ -372,25 +401,21 @@ code {
     }
 }
 
-*, *::before, *::after {
-    box-sizing: border-box;
-    font: {
-        family: var(--font-family-sans-serif);
-    }
-}
-
-::selection {
-    background-color: var(--accent-color-dark-1);
-    color: #fff;
-}
-
+// Scrollers
+// Utility class to create a styled scroller and scrollbar
 .scroller {
     overflow: auto;
     overflow: overlay;
+
+    // An attempt at recreating WinUI 2.6 scrollbars
+    // (mixed results)
     &::-webkit-scrollbar {
         display: block;
         width: 14px;
         border-radius: 14px;
+
+        // Why does webkit have to be such a pain to work with sometimes?
+        // At least it's not firefox.
         &:vertical {
             @media (prefers-color-scheme: light) {
                 --scrollbar-caret-top: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none'%3E%3Cpath d='M6.10204 16.9814C5.0281 16.9814 4.45412 15.7165 5.16132 14.9083L10.6831 8.59765C11.3804 7.80083 12.6199 7.80083 13.3172 8.59765L18.839 14.9083C19.5462 15.7165 18.9722 16.9814 17.8983 16.9814H6.10204Z' fill='rgba(0, 0, 0, 0.447)'/%3E%3C/svg%3E");
@@ -401,16 +426,16 @@ code {
                 --scrollbar-caret-bottom: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none'%3E%3Cpath d='M6.10204 8C5.0281 8 4.45412 9.2649 5.16132 10.0731L10.6831 16.3838C11.3804 17.1806 12.6199 17.1806 13.3172 16.3838L18.839 10.0731C19.5462 9.2649 18.9722 8 17.8983 8H6.10204Z' fill='rgba(255, 255, 255, 0.545)'/%3E%3C/svg%3E");
             }
         }
-        // &:horizontal {
-        //     @media (prefers-color-scheme: light) {
-        //         --scrollbar-caret-top: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none'%3E%3Cpath d='M9 17.8983C9 18.9722 10.2649 19.5462 11.0731 18.839L17.3838 13.3172C18.1806 12.6199 18.1806 11.3804 17.3838 10.6831L11.0731 5.16132C10.2649 4.45412 9 5.02809 9 6.10204V17.8983Z' fill='rgba(0, 0, 0, 0.447)'/%3E%3C/svg%3E");
-        //         --scrollbar-caret-bottom: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none'%3E%3Cpath d='M15 17.8983C15 18.9722 13.7351 19.5462 12.9268 18.839L6.61617 13.3172C5.81935 12.6199 5.81935 11.3804 6.61617 10.6831L12.9268 5.16132C13.7351 4.45412 15 5.02809 15 6.10204L15 17.8983Z' fill='rgba(255, 255, 255, 0.545)'/%3E%3C/svg%3E");
-        //     }
-        //     @media (prefers-color-scheme: dark) {
-        //         --scrollbar-caret-top: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none'%3E%3Cpath d='M9 17.8983C9 18.9722 10.2649 19.5462 11.0731 18.839L17.3838 13.3172C18.1806 12.6199 18.1806 11.3804 17.3838 10.6831L11.0731 5.16132C10.2649 4.45412 9 5.02809 9 6.10204V17.8983Z' fill='rgba(0, 0, 0, 0.447)'/%3E%3C/svg%3E");
-        //         --scrollbar-caret-bottom: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none'%3E%3Cpath d='M15 17.8983C15 18.9722 13.7351 19.5462 12.9268 18.839L6.61617 13.3172C5.81935 12.6199 5.81935 11.3804 6.61617 10.6831L12.9268 5.16132C13.7351 4.45412 15 5.02809 15 6.10204L15 17.8983Z' fill='rgba(255, 255, 255, 0.545)'/%3E%3C/svg%3E");
-        //     }
-        // }
+        &:horizontal {
+            @media (prefers-color-scheme: light) {
+                --scrollbar-caret-top: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none'%3E%3Cpath d='M9 17.8983C9 18.9722 10.2649 19.5462 11.0731 18.839L17.3838 13.3172C18.1806 12.6199 18.1806 11.3804 17.3838 10.6831L11.0731 5.16132C10.2649 4.45412 9 5.02809 9 6.10204V17.8983Z' fill='rgba(0, 0, 0, 0.447)'/%3E%3C/svg%3E");
+                --scrollbar-caret-bottom: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none'%3E%3Cpath d='M15 17.8983C15 18.9722 13.7351 19.5462 12.9268 18.839L6.61617 13.3172C5.81935 12.6199 5.81935 11.3804 6.61617 10.6831L12.9268 5.16132C13.7351 4.45412 15 5.02809 15 6.10204L15 17.8983Z' fill='rgba(255, 255, 255, 0.545)'/%3E%3C/svg%3E");
+            }
+            @media (prefers-color-scheme: dark) {
+                --scrollbar-caret-top: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none'%3E%3Cpath d='M9 17.8983C9 18.9722 10.2649 19.5462 11.0731 18.839L17.3838 13.3172C18.1806 12.6199 18.1806 11.3804 17.3838 10.6831L11.0731 5.16132C10.2649 4.45412 9 5.02809 9 6.10204V17.8983Z' fill='rgba(0, 0, 0, 0.447)'/%3E%3C/svg%3E");
+                --scrollbar-caret-bottom: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none'%3E%3Cpath d='M15 17.8983C15 18.9722 13.7351 19.5462 12.9268 18.839L6.61617 13.3172C5.81935 12.6199 5.81935 11.3804 6.61617 10.6831L12.9268 5.16132C13.7351 4.45412 15 5.02809 15 6.10204L15 17.8983Z' fill='rgba(255, 255, 255, 0.545)'/%3E%3C/svg%3E");
+            }
+        }
         &:hover {
             background: var(--scrollbar-caret-bottom) bottom center/contain no-repeat,
                         var(--scrollbar-caret-top) top center/contain no-repeat,
@@ -434,6 +459,7 @@ code {
     }
 }
 
+// Utility class to create a styled anchor
 .hyperlink {
     color: var(--accent-text-default);
     text-decoration: underline;
@@ -448,9 +474,4 @@ code {
     &:active {
         color: var(--accent-text-secondary); 
     }
-}
-
-*:focus-visible:not(.textbox) {
-    outline: none !important;
-    box-shadow: 0 0 0 2px var(--focus-stroke-outer) !important;
 }
