--- a/src/styles/_markdown.scss
+++ b/src/styles/_markdown.scss
@@ -131,7 +131,7 @@
     }
 
     // Anchors
-    a {
+    a:not(.hyperlink-button) {
         color: var(--accent-text-default);
         text-decoration: underline;
         text-decoration-skip-ink: none;
