decrease page padding on mobile

--- a/src/styles/pages/docs.scss
+++ b/src/styles/pages/docs.scss
@@ -134,7 +134,8 @@
         // page padding looks good on desktop, but can be
         // ugly on mobile.
         &-inner {
-            padding: 48px;
+            padding: 24px;
+            padding-top: 16px;
         }
     }
 
